--- a/.github/workflows/objective-c-xcode.yml
+++ b/.github/workflows/objective-c-xcode.yml
@@ -17,7 +17,7 @@ jobs:
       #
 
       - name: "Select Xcode 12.0.0"
-        uses: devbotsxyz/xcode-select@master
+        uses: devbotsxyz/xcode-select@v1
         with:
           version: "13.3.1"
 
