--- a/.github/workflows/xcode-release.yml
+++ b/.github/workflows/xcode-release.yml
@@ -1,30 +1,44 @@
-name: Xcode - Build and Analyze
+name: Release
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    tags: [ v* ]
 
 jobs:
-  build:
-    name: Build and analyse default scheme using xcodebuild command
+  release:
     runs-on: macos-latest
-
+    timeout-minutes: 15
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set Default Scheme
-        run: |
-          scheme_list=$(xcodebuild -list -json | tr -d "\n")
-          default=$(echo $scheme_list | ruby -e "require 'json'; puts JSON.parse(STDIN.gets)['project']['targets'][0]")
-          echo $default | cat >default
-          echo Using default scheme: $default
-      - name: Build
+      - name: "Checkout Project"
+        uses: actions/checkout@v2
+
+      #
+      # Setup
+      #
+
+      - name: "Select Xcode 12.0.0"
+        uses: devbotsxyz/xcode-select@v1
+        with:
+          version: "13.2.1"
+
+      #
+      # Build
+      #
+
+      - name: "Build"
+        uses: devbotsxyz/xcode-build@v1
+
+      #
+      # Zip up the app and add it to the GitHub Release as a
+      # downloadable asset.
+      #
+
+      - name: Package for Distribution
+        run: ditto -V -c -k --keepParent "build/Release/airbrush.bundle" "airbrush.zip"
+
+      - name: Release app
+        uses: softprops/action-gh-release@v1
+        with:
+          files: airbrush.zip
         env:
-          scheme: ${{ 'default' }}
-        run: |
-          if [ $scheme = default ]; then scheme=$(cat default); fi
-          if [ "`ls -A | grep -i \\.xcworkspace\$`" ]; then filetype_parameter="workspace" && file_to_build="`ls -A | grep -i \\.xcworkspace\$`"; else filetype_parameter="project" && file_to_build="`ls -A | grep -i \\.xcodeproj\$`"; fi
-          file_to_build=`echo $file_to_build | awk '{$1=$1;print}'`
-          xcodebuild clean build analyze -scheme "$scheme" -"$filetype_parameter" "$file_to_build" | xcpretty && exit ${PIPESTATUS[0]}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
