--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,6 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-# Xcode build artifacts
+# Xcode
 build/
+airbrush.xcodeproj/project.xcworkspace/xcuserdata/
